--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           <div class="row">
             <div class="banner-info text-center wow fadeIn delay-05s">
               <h1 class="bnr-title">We are at ba<span>ker</span></h1>
-              <h2 class="bnr-sub-title">Starting a new journey!!</h2>
-              <p class="bnr-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip <br>ex ea commodo consequat.</p>
+              <h2 class="bnr-sub-title">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</h2>
+              <p class="bnr-para">We are a high-value, low-cost mentoring and career outreach platform.<br>We don't just mentor our students<br>We mold them into Software Engineers and all-around amazing employees.</p>
               <div class="brn-btn">
                 <a href="#" class="btn btn-download">Download now!</a>
                 <a href="#" class="btn btn-more">Learn More</a>
