Our Approach section and other small changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#main-header">Home</a></li>
                 <li class=""><a href="#feature">About</a></li>
-                <li class=""><a href="#service">Services</a></li>
+                <li class=""><a href="#service">Our Approach</a></li>
                 <li class=""><a href="#portfolio">Portfolio</a></li>
                 <li class=""><a href="#testimonial">Testimonial</a></li>
                 <li class=""><a href="#blog">Blog</a></li>
@@ -56,8 +56,8 @@
         <div class="container">
           <div class="row">
             <div class="banner-info text-center wow fadeIn delay-05s">
-              <h1 class="bnr-title">We are at ba<span>ker</span></h1>
-              <h2 class="bnr-sub-title">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</h2>
+              <h2 class="bnr-title">Code Is Life</h2>
+              <h4 class="bnr-sub-title">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</h4>
               <p class="bnr-para">We are a high-value, low-cost mentoring and career outreach platform.<br>We don't just mentor our students<br>We mold them into Software Engineers and all-around amazing employees.</p>
               <div class="brn-btn">
                 <a href="#" class="btn btn-download">Download now!</a>
@@ -122,34 +122,75 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">What We Do?</h2>
-            <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h2 class="service-title pad-bt15">Our Approach</h2>
+            
+
+            <!-- <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p> -->
+
+            <h3>Does it work?<h2>
+
+            <h5>
+            Yup! Big time! Our first cohort of mentees at CCNY are working this summer <br/>
+			<br/>At RBC Barclays Centiment. <br />
+			<br/>And these are our FRESHMEN!!!!! Yes, first-year students. <br/>
+			<br/>They are getting gigs in the gig economy before they even finish their first year of study! <br/>
+			<br/> By the time they graduate they will be primed to tackle any job at any tech venture. We know it. <br/>
+			<br/>In due course, you will too! <br/>
+			<br/>TODO: Include company logos (get permission first)
+			</h5>
+
             <hr class="bottom-line">
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>D</span>esign And Developement</h3>
+              <h3>Getting a job is hard work!</h3>
+              <!-- <p>llll ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+
+              	<br>Getting a great job is even harder. <br/>
+				<br>That&rsquo;s where Code is Life steps in. <br/>
+				<br>We know what it takes to succeed. <br/>
+				<br>We prep our students from Day 1. <br/>
+				<br>Before they even start their academics. <br/>
+				<br>Before they even think of looking for a job, never mind a career. <br/>
+				<br>We demand our scholars commit to a code of conduct. <br/>
+				<br>They must prove their value and worth. <br/>
+				<br>They must commit to elevate their reach. <br/>
+				<br>To give us their time and tenacity. <br/>
+				<br>In turn, we commit to build their professional outlook. <br/>
+				<br>Break down barriers. Open doors to their future. <br/>
+				<br>We expect that true success will take four years to measure, when they graduate.<br/>
+				<br>But we have already seen signs of success. <br/>
+
+              <a href="">learn more...</a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-item">
+              <h3>Demand a lot, Get a lot</h3>
+
+              	<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+
+              	<br>Our proof of concept works.<br/>
+				<br>Our students are a huge success! <br/>
+              	<br>One semester is all it took. <br/>				
+              	<br>We started in February 2017. <br/>
+				<br> We mentored and coached arranged meetings with professional mentors and all-in-all cloaked our freshmen CS honors students with the state of mind that they can excel. <br/>
+              	<br>They have transformed. <br/>				
+              	<br>They are equipped to compete and connect and perform at the highest of standards.<br/>
+              
+              <a href="">learn more...</a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-item">
+              <h3>The Future</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <a href="">learn more...</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>W</span>ebsite Maintenance</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="">learn more...</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="service-item">
-              <h3><span>S</span>eo Optimization</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="">learn more...</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="service-item">
-              <h3><span>D</span>igital Marketing</h3>
+              <h3>Born out of Necessity</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <a href="">Learn more...</a>
             </div>
