--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#main-header">Home</a></li>
-                <li class=""><a href="#feature">About</a></li>
+                <li class=""><a href="#whoweare">Who we are</a></li>
+                <li class=""><a href="#whatwedo">What we do</a></li>
+                <li class=""><a href="#blog">How we do it</a></li>
                 <li class=""><a href="#service">Our Approach</a></li>
                 <li class=""><a href="#portfolio">Portfolio</a></li>
                 <li class=""><a href="#testimonial">Testimonial</a></li>
-                <li class=""><a href="#blog">Blog</a></li>
                 <li class=""><a href="#contact">Contact Us</a></li>
               </ul>
             </div>
@@ -58,7 +59,7 @@
             <div class="banner-info text-center wow fadeIn delay-05s">
               <h2 class="bnr-title">Code Is Life</h2>
               <h4 class="bnr-sub-title">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</h4>
-              <p class="bnr-para">We are a high-value, low-cost mentoring and career outreach platform.<br>We don't just mentor our students<br>We mold them into Software Engineers and all-around amazing employees.</p>
+              <p class="bnr-para">We are a high-value, low-cost mentoring and career outreach platform</p>
               <div class="brn-btn">
                 <a href="#" class="btn btn-download">Download now!</a>
                 <a href="#" class="btn btn-more">Learn More</a>
@@ -74,7 +75,7 @@
     </div>
     <!--/ HEADER-->
     <!---->
-    <section id="feature" class="section-padding wow fadeIn delay-05s">
+    <section id="whoweare" class="section-padding wow fadeIn delay-05s">
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -82,8 +83,8 @@
               <div class="item-img">
                 <img src="img/ser01.png">
               </div>
-              <h3 class="pad-bt15">Creative Concept</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3 class="pad-bt15">Best and brightest</h3>
+              <p>Our students are this generation’s “best and brightest” at CCNY. They have SATs and GPAs on par with Ivy League students and are on full-tuition merit-based scholarships.</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -91,8 +92,8 @@
               <div class="item-img">
                 <img src="img/ser02.png">
               </div>
-              <h3 class="pad-bt15">Amazing Design</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3 class="pad-bt15">Driven</h3>
+              <p>They are driven, focused, and singularly attentive to the demands of the marketplace.</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -100,17 +101,125 @@
               <div class="item-img">
                 <img src="img/ser03.png">
               </div>
-              <h3 class="pad-bt15">Cost effective</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3 class="pad-bt15">Serious about careers</h3>
+              <p>They are dead serious about their careers. And we are just as serious about making sure they are primed and prepped for the workplace, even as they just begin their academics.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---->
+    <!---->
+    <section id="whatwedo" class="section-padding wow fadeInUp delay-05s">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2 class="service-title pad-bt15">What We Do?</h2>
+            <p class="sub-title pad-bt15">We don't just mentor our students<br>We mold them into Software Engineers and all-around amazing employees.</p>
+            <hr class="bottom-line">
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-item">
+              <h3><span>C</span>onnections</h3>
+              <p>Connect our students to New York's tech and finance community. We provide mentorship by developers, engineers and executives across the media, mobile, advertising and content landscapes.</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="wrap-item text-center">
-              <div class="item-img">
-                <img src="img/ser04.png">
+            <div class="service-item">
+              <h3><span>T</span>raining</h3>
+              <p>Train students on real world side projects at start-ups and industry icons</p>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-item">
+              <h3><span>B</span>ootcamps</h3>
+              <p>Focused courses and seminars in AI, SEO and sentiment analysis and drilled in basics and technical interview prep. We run “soft skills” boot camps so our students are fluid, aware and dynamic in basic “workplace 101.”</p>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-item">
+              <h3><span>C</span>ommunication skills</h3>
+              <p>We guarantee our kids not only can code, but they can converse with a board executive or a receptionist, and everyone in between In Python, Ruby, C++ … and English.</p>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+    <!---->
+    <!---->
+    <section id="blog" class="section-padding wow fadeInUp delay-05s">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2 class="service-title pad-bt15">How do we do it? </h2>
+            <p class="sub-title pad-bt15">The most active members of our group are well engaged outside of class. We know side projects matter. Our kids have been coding, designing apps, competing in Hackathons, and making connections at Meetups.</p>
+            <hr class="bottom-line">
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="blog-sec">
+              <div class="blog-img">
+                <a href="">
+                  <img src="img/signthis.png" class="img-responsive">
+                </a>
               </div>
-              <h3 class="pad-bt15">Secure</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div class="blog-info">
+                <h2>SignThis</h2>
+                <!--
+                <div class="blog-comment">
+                    <p>Posted In: <span>Legal Advice</span></p>
+                    <p>
+                      <span><a href="#"><i class="fa fa-comments"></i></a> 15</span>
+                      <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
+                </div>
+                -->
+                <p>A web app that translates sign language into English to ease communication between the speaking and non-speaking world</p>
+                <a href="https://vimeo.com/218205927" class="read-more">Read more →</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="blog-sec">
+              <div class="blog-img">
+                <a href="">
+                  <img src="img/goodbot.png" class="img-responsive">
+                </a>
+              </div>
+              <div class="blog-info">
+                <h2>goodbot</h2>
+                <!--
+                <div class="blog-comment">
+                    <p>Posted In: <span>Legal Advice</span></p>
+                    <p>
+                      <span><a href="#"><i class="fa fa-comments"></i></a> 15</span>
+                      <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
+                </div>
+                -->
+                <p>goodbot is a SlackBot that monitors messages sent in a slack channel to make sure that they are appropriate. </p>
+                <a href="https://vimeo.com/218205927" class="read-more">Read more →</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="blog-sec">
+              <div class="blog-img">
+                <a href="">
+                  <img src="img/concertfish.png" class="img-responsive">
+                </a>
+              </div>
+              <div class="blog-info">
+                <h2>Concertfish</h2>
+                <!--
+                <div class="blog-comment">
+                    <p>Posted In: <span>Legal Advice</span></p>
+                    <p>
+                      <span><a href="#"><i class="fa fa-comments"></i></a> 15</span>
+                      <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
+                </div>
+                -->
+                <p>We let listeners experience music as it's made. </p>
+                <a href="" class="read-more">Read more →</a>
+              </div>
             </div>
           </div>
         </div>
@@ -342,77 +451,6 @@
       </div>
     </section>
     <!---->
-    <section id="blog" class="section-padding wow fadeInUp delay-05s">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">Latest from our blog</h2>
-            <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
-            <hr class="bottom-line">
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="blog-sec">
-              <div class="blog-img">
-                <a href="">
-                  <img src="img/blog01.jpg" class="img-responsive">
-                </a>
-              </div>
-              <div class="blog-info">
-                <h2>This is Lorem ipsum heading.</h2>
-                <div class="blog-comment">
-                    <p>Posted In: <span>Legal Advice</span></p>
-                    <p>
-                      <span><a href="#"><i class="fa fa-comments"></i></a> 15</span>
-                      <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
-                </div>
-                <p>We cannot expect people to have respect for laws and orders until we teach respect to those we have entrusted to enforce those laws all the time. we always want to help people cordially.</p>
-                <a href="" class="read-more">Read more →</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="blog-sec">
-              <div class="blog-img">
-                <a href="">
-                  <img src="img/blog02.jpg" class="img-responsive">
-                </a>
-              </div>
-              <div class="blog-info">
-                <h2>This is Lorem ipsum heading.</h2>
-                <div class="blog-comment">
-                    <p>Posted In: <span>Legal Advice</span></p>
-                    <p>
-                      <span><a href="#"><i class="fa fa-comments"></i></a> 15</span>
-                      <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
-                </div>
-                <p>We cannot expect people to have respect for laws and orders until we teach respect to those we have entrusted to enforce those laws all the time. we always want to help people cordially.</p>
-                <a href="" class="read-more">Read more →</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="blog-sec">
-              <div class="blog-img">
-                <a href="">
-                  <img src="img/blog03.jpg" class="img-responsive">
-                </a>
-              </div>
-              <div class="blog-info">
-                <h2>This is Lorem ipsum heading.</h2>
-                <div class="blog-comment">
-                    <p>Posted In: <span>Legal Advice</span></p>
-                    <p>
-                      <span><a href="#"><i class="fa fa-comments"></i></a> 15</span>
-                      <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
-                </div>
-                <p>We cannot expect people to have respect for laws and orders until we teach respect to those we have entrusted to enforce those laws all the time. we always want to help people cordially.</p>
-                <a href="" class="read-more">Read more →</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
     <!---->
     <section id="contact" class="section-padding wow fadeInUp delay-05s">
       <div class="container">
