Add on who we are

--- a/index.html
+++ b/index.html
@@ -102,7 +102,16 @@
                 <img src="img/ser03.png">
               </div>
               <h3 class="pad-bt15">Serious about careers</h3>
-              <p>They are dead serious about their careers. And we are just as serious about making sure they are primed and prepped for the workplace, even as they just begin their academics.</p>
+              <p>They are dead serious about their careers. Our students want to learn what it takes to reach their career goals, and they take action early on.</p>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="wrap-item text-center">
+              <div class="item-img">
+                <img src="img/ser03.png">
+              </div>
+              <h3 class="pad-bt15">Serious about preparation</h3>
+              <p>We are just as serious about making sure they are primed and prepped for the workplace, even as they just begin their academics.</p>
             </div>
           </div>
         </div>
