Clean up Our Approach

--- a/index.html
+++ b/index.html
@@ -245,27 +245,15 @@
 
             <!-- <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p> -->
 
-            <h3>Does it work?<h2>
+      <h3>Does it work?<h2>
 
-            <h4>
-            Yup! Big time! Our first cohort of mentees at CCNY are working this summer. <br/>
-			<br/>At RBC Barclays Centiment. <br />
-			<br/>And these are our FRESHMEN!!!!! Yes, first-year students. <br/>
-			<br/>They are getting gigs in the gig economy before they even finish their first year of study! <br/>
-			<br/> By the time they graduate they will be primed to tackle any job at any tech venture. We know it. <br/>
-			<br/>In due course, you will too! <br/>
-			<br/>TODO: Include company logos (get permission first)
-			</h4>
+      <h4>
+        <br>Yup! Big time! Our first cohort of mentees at CCNY are working this summer. At RBC Barclays Centiment. 
+  			And these are our FRESHMEN!!!!! Yes, first-year students.<br>
+        
+        <br>They are getting gigs in the gig economy before they even finish their first year of study! By the time 
+        they graduate they will be primed to tackle any job at any tech venture. We know it. In due course, you will too!<br>
 
-			<br></br>
-
-            <h4>
-            Yup! Big time! Our first cohort of mentees at CCNY are working this summer. At RBC Barclays Centiment. 
-			And these are our FRESHMEN!!!!! Yes, first-year students. 
-			They are getting gigs in the gig economy before they even finish their first year of study! 
-			By the time they graduate they will be primed to tackle any job at any tech venture. We know it. 
-			In due course, you will too! 
-			TODO: Include company logos (get permission first)
 			</h4>
 
 
@@ -277,7 +265,7 @@
               <h3>Getting a job is hard work!</h3>
               <!-- <p>llll ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
 
-              	<br>Getting a great job is even harder. <br/>
+        <br>Getting a great job is even harder. <br/>
 				<br>That&rsquo;s where Code is Life steps in. <br/>
 				<br>We know what it takes to succeed. <br/>
 				<br>We prep our students from Day 1. <br/>
