Move student profiles & success

--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/signthis.png" class="img-responsive">
+                  <img src="img/port01.jpg" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
-                <h2>SignThis</h2>
+                <h2>Kirstyn Natavio</h2>
                 <!--
                 <div class="blog-comment">
                     <p>Posted In: <span>Legal Advice</span></p>
@@ -182,8 +182,8 @@
                       <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
                 </div>
                 -->
-                <p>A web app that translates sign language into English to ease communication between the speaking and non-speaking world</p>
-                <a href="https://vimeo.com/218205927" class="read-more">Read more →</a>
+                <p>Kirstyn, a Girls Who Code and CodeNow alumni, was introduced to a developer in Contently who mentors her and works on a side project with her. Kirstyn also participated in the HackNY hackathon, where she built SignThis with other members to translate sign language into English (using artificial intelligence). She was accepted to participate in CUNY Tech Prep as a freshman, even though the program usually only accepts juniors and seniors. (blah blah more information)</p>
+                <a href="" class="read-more">Read more →</a>
               </div>
             </div>
           </div>
@@ -191,11 +191,11 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/goodbot.png" class="img-responsive">
+                  <img src="img/port02.jpg" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
-                <h2>goodbot</h2>
+                <h2>Michael Ousseinov</h2>
                 <!--
                 <div class="blog-comment">
                     <p>Posted In: <span>Legal Advice</span></p>
@@ -204,8 +204,8 @@
                       <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
                 </div>
                 -->
-                <p>goodbot is a SlackBot that monitors messages sent in a slack channel to make sure that they are appropriate. </p>
-                <a href="https://vimeo.com/218205927" class="read-more">Read more →</a>
+                <p>Something about Michael</p>
+                <a href="" class="read-more">Read more →</a>
               </div>
             </div>
           </div>
@@ -217,7 +217,7 @@
                 </a>
               </div>
               <div class="blog-info">
-                <h2>Concertfish</h2>
+                <h2>Someone</h2>
                 <!--
                 <div class="blog-comment">
                     <p>Posted In: <span>Legal Advice</span></p>
@@ -226,10 +226,78 @@
                       <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
                 </div>
                 -->
-                <p>We let listeners experience music as it's made. </p>
+                <p>Something about someone</p>
                 <a href="" class="read-more">Read more →</a>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---->
+    <!---->
+    <!--WIDTH OF PICTURES WHEN CROPPING: 1817px-->
+    <section id="portfolio" class="section-padding wow fadeInUp delay-05s">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2 class="service-title pad-bt15">Success</h2>
+            <p class="sub-title pad-bt15">These are some of the side projects that our students have worked on.</p>
+            <hr class="bottom-line">
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+            <figure>
+              <img src="img/signthis.png" class="img-responsive">
+              <figcaption>
+                  <h2>SignThis</h2>
+                  <p>A web app that translates sign language into English to ease communication between the speaking and non-speaking world</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+            <figure>
+              <img src="img/port03.jpg" class="img-responsive">
+              <figcaption>
+                  <h2>goodbot</h2>
+                  <p>goodbot is a SlackBot that monitors messages sent in a slack channel to make sure that they are appropriate.</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+            <figure>
+              <img src="img/port03.jpg" class="img-responsive">
+              <figcaption>
+                  <h2>Project For Everyone</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+            <figure>
+              <img src="img/port04.jpg" class="img-responsive">
+              <figcaption>
+                  <h2>Project For Everyone</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+            <figure>
+              <img src="img/port05.jpg" class="img-responsive">
+              <figcaption>
+                  <h2>Project For Everyone</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+            <figure>
+              <img src="img/port06.jpg" class="img-responsive">
+              <figcaption>
+                  <h2>Project For Everyone</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
+              </figcaption>
+            </figure>
           </div>
         </div>
       </div>
@@ -291,71 +359,7 @@
     <!---->
     <!---->
     <!---->
-    <section id="portfolio" class="section-padding wow fadeInUp delay-05s">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">Our Recent Works</h2>
-            <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
-            <hr class="bottom-line">
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
-            <figure>
-              <img src="img/port01.jpg" class="img-responsive">
-              <figcaption>
-                  <h2>Project For Everyone</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
-            <figure>
-              <img src="img/port02.jpg" class="img-responsive">
-              <figcaption>
-                  <h2>Project For Everyone</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
-            <figure>
-              <img src="img/port03.jpg" class="img-responsive">
-              <figcaption>
-                  <h2>Project For Everyone</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
-            <figure>
-              <img src="img/port04.jpg" class="img-responsive">
-              <figcaption>
-                  <h2>Project For Everyone</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
-            <figure>
-              <img src="img/port05.jpg" class="img-responsive">
-              <figcaption>
-                  <h2>Project For Everyone</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
-            <figure>
-              <img src="img/port06.jpg" class="img-responsive">
-              <figcaption>
-                  <h2>Project For Everyone</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-      </div>
-    </section>
+    
     <!---->
     <!---->
     <section id="testimonial" class="wow fadeInUp delay-05s">
