--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CS Honors Mentoring</title>
+    <title>CCNY Code</title>
     <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
     
@@ -57,7 +57,7 @@
         <div class="container">
           <div class="row">
             <div class="banner-info text-center wow fadeIn delay-05s">
-              <h2 class="bnr-title">Code Is Life</h2>
+              <h2 class="bnr-title">CCNY Code</h2>
               <h4 class="bnr-sub-title">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</h4>
               <p class="bnr-para">We are a high-value, low-cost mentoring and career outreach platform</p>
               <div class="brn-btn">
@@ -313,11 +313,11 @@
            <h3>Does it work?</h3>
             <p class="sub-title pad-bt15">Yup! Big time! Our first cohort of mentees at CCNY are working this summer. At RBC, Barclays, and Centiment. And these are our FRESHMEN!!!!! Yes, first-year students.</p>
             <p class="sub-title pad-bt15">They are getting gigs in the gig economy before they even finish their first year of study! By the time they graduate they will be primed to tackle any job at any tech venture. We know it. In due course, you will too!</p>
-          <hr class="bottom-line">
+          <hr class="bottom-line">`
 
 
            <h3>Getting a job is hard work!</h3>
-            <p class="sub-title pad-bt15">Getting a great job is even harder. That’s where Code is Life steps in. We know what it takes to succeed. We prep our students from Day 1. Before they even start their academics. Before they even think of looking for a job, never mind a career.</p>
+            <p class="sub-title pad-bt15">Getting a great job is even harder. That’s where CCNY Code steps in. We know what it takes to succeed. We prep our students from Day 1. Before they even start their academics. Before they even think of looking for a job, never mind a career.</p>
             <p class="sub-title pad-bt15">We demand our scholars commit to a code of conduct. They must prove their value and worth. They must commit to elevate their reach. To give us their time and tenacity.</p>
             <p class="sub-title pad-bt15">In turn, we commit to build their professional outlook. Break down barriers. Open doors to their future. We expect that true success will take four years to measure, when they graduate. But we have already seen signs of success.</p>
           <hr class="bottom-line">
@@ -331,7 +331,7 @@
             <hr class="bottom-line">
 
            <h3>Born out of Necessity</h3>
-            <p class="sub-title pad-bt15">Code Is Life is a side project built out of duty and honor. It started as an accident. A chance meeting between a CS student and a single alumnus Graduates of CCNY. Separated by disciplines, one a budding CS engineer, the other an ex-journalist and editor turned lawyer and asset manager. Separated by 40 years, David Wysoki and Anthony Shalagin met on campus after an event and realized they desired to do something spectacular. Code Is Life is their invention.</p>
+            <p class="sub-title pad-bt15">CCNY Code is a side project built out of duty and honor. It started as an accident. A chance meeting between a CS student and a single alumnus Graduates of CCNY. Separated by disciplines, one a budding CS engineer, the other an ex-journalist and editor turned lawyer and asset manager. Separated by 40 years, David Wysoki and Anthony Shalagin met on campus after an event and realized they desired to do something spectacular. CCNY Code is their invention.</p>
           <hr class="bottom-line">    
 
 
