Update website colors, info, pics

--- a/index.html
+++ b/index.html
@@ -36,17 +36,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Ba<span class="logo-dec">ker</span></a>
+              <a class="navbar-brand" href="#">CCNY<span class="logo-dec">Code</span></a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#main-header">Home</a></li>
-                <li class=""><a href="#whoweare">Who we are</a></li>
                 <li class=""><a href="#whatwedo">What we do</a></li>
                 <li class=""><a href="#blog">How we do it</a></li>
+                <li class=""><a href="#portfolio">Success</a></li>
                 <li class=""><a href="#service">Our Approach</a></li>
-                <li class=""><a href="#portfolio">Portfolio</a></li>
-                <li class=""><a href="#testimonial">Testimonial</a></li>
                 <li class=""><a href="#contact">Contact Us</a></li>
               </ul>
             </div>
@@ -61,7 +59,7 @@
               <h4 class="bnr-sub-title">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</h4>
               <p class="bnr-para">We are a high-value, low-cost mentoring and career outreach platform</p>
               <div class="brn-btn">
-                <a href="#" class="btn btn-download">Download now!</a>
+                <a href="#" class="btn btn-download">Donate</a>
                 <a href="#" class="btn btn-more">Learn More</a>
               </div>
               <div class="overlay-detail">
@@ -75,80 +73,36 @@
     </div>
     <!--/ HEADER-->
     <!---->
-    <section id="whoweare" class="section-padding wow fadeIn delay-05s">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="wrap-item text-center">
-              <div class="item-img">
-                <img src="img/ser01.png">
-              </div>
-              <h3 class="pad-bt15">Best and brightest</h3>
-              <p>Our students are this generation’s “best and brightest” at CCNY. They have SATs and GPAs on par with Ivy League students and are on full-tuition merit-based scholarships.</p>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="wrap-item text-center">
-              <div class="item-img">
-                <img src="img/ser02.png">
-              </div>
-              <h3 class="pad-bt15">Driven</h3>
-              <p>They are driven, focused, and singularly attentive to the demands of the marketplace.</p>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="wrap-item text-center">
-              <div class="item-img">
-                <img src="img/ser03.png">
-              </div>
-              <h3 class="pad-bt15">Serious about careers</h3>
-              <p>They are dead serious about their careers. Our students want to learn what it takes to reach their career goals, and they take action early on.</p>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="wrap-item text-center">
-              <div class="item-img">
-                <img src="img/ser03.png">
-              </div>
-              <h3 class="pad-bt15">Serious about preparation</h3>
-              <p>We are just as serious about making sure they are primed and prepped for the workplace, even as they just begin their academics.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!---->
-    <!---->
     <section id="whatwedo" class="section-padding wow fadeInUp delay-05s">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
             <h2 class="service-title pad-bt15">What We Do?</h2>
-            <p class="sub-title pad-bt15">We don't just mentor our students<br>We mold them into Software Engineers and all-around amazing employees.</p>
+            <p class="sub-title pad-bt15">We don't just mentor our students<br>We mold them into engineers and all-around amazing employees.</p>
             <hr class="bottom-line">
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
               <h3><span>C</span>onnections</h3>
-              <p>Connect our students to New York's tech and finance community. We provide mentorship by developers, engineers and executives across the media, mobile, advertising and content landscapes.</p>
+              <p>Mentorship by developers, engineers and executives across the media, mobile, advertising and content landscapes.</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
               <h3><span>T</span>raining</h3>
-              <p>Train students on real world side projects at start-ups and industry icons</p>
+              <p>Training on real world side projects in hackathons and innovation competitions. </p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>B</span>ootcamps</h3>
-              <p>Focused courses and seminars in AI, SEO and sentiment analysis and drilled in basics and technical interview prep. We run “soft skills” boot camps so our students are fluid, aware and dynamic in basic “workplace 101.”</p>
+              <h3><span>S</span>oft Skills 101</h3>
+              <p>Bootcamps so our students are fluid, aware and dynamic in workplace 101.</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>C</span>ommunication skills</h3>
-              <p>We guarantee our kids not only can code, but they can converse with a board executive or a receptionist, and everyone in between In Python, Ruby, C++ … and English.</p>
+              <h3><span>C</span>ode + Converse</h3>
+              <p>Our kids not only can code, but can converse in Python, Ruby, C++ … and English.</p>
             </div>
           </div>
           
@@ -165,11 +119,52 @@
             <p class="sub-title pad-bt15">The most active members of our group are well engaged outside of class. We know side projects matter. Our kids have been coding, designing apps, competing in Hackathons, and making connections at Meetups.</p>
             <hr class="bottom-line">
           </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="wrap-item text-center">
+                  <div class="item-img">
+                    <img src="img/ser01.png">
+                  </div>
+                  <h3 class="pad-bt15">Best and brightest</h3>
+                  <p>SATs and GPAs on par with Ivy League students and full-tuition merit-based scholarships.</p>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="wrap-item text-center">
+                  <div class="item-img">
+                    <img src="img/ser02.png">
+                  </div>
+                  <h3 class="pad-bt15">Driven</h3>
+                  <p>Focused and attentive to the demands of the marketplace.</p>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="wrap-item text-center">
+                  <div class="item-img">
+                    <img src="img/ser03.png">
+                  </div>
+                  <h3 class="pad-bt15">Serious about careers</h3>
+                  <p>Eager to learn how to reach their career goals and they take action.</p>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="wrap-item text-center">
+                  <div class="item-img">
+                    <img src="img/ser03.png">
+                  </div>
+                  <h3 class="pad-bt15">Serious about preparation</h3>
+                  <p>We make sure they are primed and prepped for the workplace, even as freshmen.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <br><br>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/port01.jpg" class="img-responsive">
+                  <img src="img/kirstyn.jpg" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
@@ -191,7 +186,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/port02.jpg" class="img-responsive">
+                  <img src="img/michael.png" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
@@ -362,6 +357,7 @@
     
     <!---->
     <!---->
+    <!--
     <section id="testimonial" class="wow fadeInUp delay-05s">
       <div class="bg-testicolor">
         <div class="container section-padding">
@@ -402,6 +398,7 @@
         </div>
       </div>
     </section>
+    -->
     <!---->
     <!---->
     <section id="contact" class="section-padding wow fadeInUp delay-05s">
@@ -409,13 +406,13 @@
         <div class="row">
           <div class="col-md-12 text-center white">
             <h2 class="service-title pad-bt15">Keep in touch with us</h2>
-            <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="sub-title pad-bt15">We would like to hear from you!</p>
             <hr class="bottom-line white-bg">
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="loction-info white">
-              <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>A99 Adam Street<br>Texas, TX 555072</p>
-              <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@baker.com</p>
+              <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>160 Convent Avenue<br>New York, NY 10031</p>
+              <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>dwysoki@axoniccap.com</p>
               <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+41 5787 2323</p>
             </div>
           </div>
