--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/kirstyn.jpg" class="img-responsive">
+                  <img src="img/kirstyn.png" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
@@ -208,7 +208,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/concertfish.png" class="img-responsive">
+                  <img src="img/Concertfish.png" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
