--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                       <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
                 </div>
                 -->
-                <p>Kirstyn is a Girls Who Code and CodeNow alumni. As a freshman, she was accepted to participate in CUNY Tech Prep, a full-stack JavaScript bootcamp that helps students develop technical and professional skills (even though the program usually only accepts juniors and seniors). In the summer of 2017, Kirstyn was an instructor at CodeNow, introducing high schoolers to full-stack web app development using HTML, CSS, JavaScript, and Ruby on Rails. Kirstyn has also participated in the HackNY hackathon, where she built SignThis with other members to translate sign language into English (using artificial intelligence). She aspires to become a successful Software Engineer at a big company like Google, and she wants to work with artificial intelligence in the future. </p>
+                <p>Kirstyn is a Girls Who Code and CodeNow alumni. As a freshman, she was accepted to participate in CUNY Tech Prep, a full-stack JavaScript bootcamp that helps students develop technical and professional skills (even though the program usually only accepts juniors and seniors). In the summer of 2017, Kirstyn was an instructor at CodeNow, introducing high schoolers to full-stack web app development using HTML, CSS, JavaScript, and Ruby on Rails. Kirstyn had also participated in the HackNY hackathon, where she built SignThis with other members to translate sign language into English (using artificial intelligence). She aspires to become a successful Software Engineer specializing in artificial intelligence in the future. </p>
                 <a href="" class="read-more">Read more →</a>
               </div>
             </div>
