Include etsy pic

--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
+              <img src="img/tripetsy.jpg" class="img-responsive">
+              <figcaption>
+                  <h2>CCNY + Etsy</h2>
+                  <p>CCNY students were given an office tour at Etsy and attended a panel hosted by Etsy Engineers, Product Managers, Engineering Managers, and others to discuss what really matters in a real world work setting.</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+            <figure>
               <img src="img/signthis.png" class="img-responsive">
               <figcaption>
                   <h2>SignThis</h2>
@@ -255,15 +264,6 @@
               <figcaption>
                   <h2>goodbot</h2>
                   <p>goodbot is a SlackBot that monitors messages sent in a slack channel to make sure that they are appropriate.</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
-            <figure>
-              <img src="img/port03.jpg" class="img-responsive">
-              <figcaption>
-                  <h2>Project For Everyone</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
               </figcaption>
             </figure>
           </div>
